fixed firefox layout bug

--- a/AC-Control/Client/src/Styles/styles.scss
+++ b/AC-Control/Client/src/Styles/styles.scss
@@ -48,10 +48,7 @@ body {
         height: 100%;
         display: flex;
         justify-content: center;
-
-        .inner-frame {
-            position: relative;
-        }
+        position: relative;
 
         #frame {
             height: 100%;
